--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -30,6 +30,12 @@
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+      <style>
+          .login_user{
+              color: #fff;
+              
+          }
+      </style>
   </head>
   <body>
     <!-- Side Navbar -->
@@ -50,7 +56,7 @@
           <ul id="side-main-menu" class="side-menu list-unstyled">
             <li><a href="/student/index/"> <i class="icon-home"></i>Home                             </a></li>
             <li><a href="/student/add/"> <i class="icon-form"></i>添加学生                           </a></li>
-            <li><a href="charts.html"> <i class="fa fa-bar-chart"></i>Charts                             </a></li>
+            <li><a href="/student/elective/"> <i class="fa fa-bar-chart"></i>选修课程                           </a></li>
             <li><a href="tables.html"> <i class="icon-grid"></i>Tables                             </a></li>
             <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i class="icon-interface-windows"></i>Example dropdown </a>
               <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
@@ -135,7 +141,7 @@
                   <span class="login_user">{{request.user.username}}</span>
                 </li>
                 <!-- Log out-->
-                <li class="nav-item"><a href="/logout/" class="nav-link logout"> <span class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i></a></li>
+                <li class="nav-item"><a href="/student/logout/" class="nav-link logout"> <span class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i></a></li>
               </ul>
             </div>
           </div>
